infrastructure/configs/cilium-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cilium-hubble
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: hubble.thekitty.zone
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: "basicauth-monitoring"
    nginx.ingress.kubernetes.io/auth-realm: "Monitoring Auth"
spec:
  rules:
  - host: hubble.thekitty.zone
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hubble-ui
            port: 
              number: 80
  tls:
    - secretName: hubble-ingress
      hosts:
        - hubble.thekitty.zone
